fixed a scrollbar problem in chromium and themed the scrollbar to fit the rest if the UI

--- a/src/App.css
+++ b/src/App.css
@@ -60,13 +60,14 @@ main {
 #content {
   padding: 5px;
   flex-grow: 0;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) var(--background);
 }
 
 #content p {
-  width: 100%;
   text-wrap: initial;
   word-wrap: break-word;
-  overflow: scroll;
   white-space: pre-wrap;
 }
 
